finished with minor edits afterwards

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <title>StudentPage</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
+    <!-- <meta
       name="google-signin-client_id"
       content="159479957223-qka39ssrtraeilbuhv0a5r07sn43oemq.apps.googleusercontent.com"
-    />
+    /> -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
@@ -37,6 +37,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
