--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,17 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-LdwnSCQdZBtYvI9Lc2kV8MzIiC3Q4lJT3hld8UtWDZvYMaWdMIeyrZV8NQyj6Ljx+5nA8s+6JkYAXm0d6MfGzg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script
+      src="https://kit.fontawesome.com/2e289d123b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <app-root></app-root>
